# jni-functions

./: README.md
JniFunctions/: settings.gradle
JniFunctions/app/: CMakeLists.txt  build.gradle
JniFunctions/app/src/androidTest/java/com/hyh/jnifunctions/: ExampleInstrumentedTest.java
JniFunctions/app/src/main/: AndroidManifest.xml
JniFunctions/app/src/main/cpp/jni/: JNI_hellolibs.cpp  Log.cpp
JniFunctions/app/src/main/cpp/jni/inc/: Log.h
JniFunctions/app/src/main/java/com/hyh/jnifunctions/: Log.java  MainActivity.java
JniFunctions/app/src/main/java/com/hyh/jnifunctions/jni/: JNIManager.java
JniFunctions/app/src/main/res/layout/: activity_main.xml
JniFunctions/app/src/main/res/values/: strings.xml  themes.xml
JniFunctions/app/src/main/res/values-night/: themes.xml
JniFunctions/app/src/test/java/com/hyh/jnifunctions/: ExampleUnitTest.java
JniFunctions/gradle/wrapper/: gradle-wrapper.properties
